--- a/react/src/styles.css
+++ b/react/src/styles.css
@@ -71,6 +71,10 @@ body {
   width: 34px;
 }
 
+.winning {
+  color: white;
+  background-color: green;
+}
 .board-row:after {
   clear: both;
   content: '';
